--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - BPL_DEBUG_ENABLED=true
       - BPL_DEBUG_PORT=8001
       - SPRING_CLOUD_CONFIG_URI=http://config-service:8888
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://itbooks-postgres:5432/itbooksdb_products
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://itbooks-postgres:5432/itbooksdb_product
       - SPRING_PROFILES_ACTIVE=testdata
   
   config-service:
