--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     depends_on:
       - itbooks-postgres
     image: "product-service"
-    container_name: "catalog-service"
+    container_name: "product-service"
     ports:
       - 9001:9001
       - 8001:8001
