--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -26,8 +26,24 @@ services:
       - BPL_JVM_THREAD_COUNT=50
       - BPL_DEBUG_ENABLED=true
       - BPL_DEBUG_PORT=9888
-
-  itbooks-postgres:
+ 
+  order-service:
+    depends_on:
+      - itbooks-postgres
+    image: "order-service"
+    container_name: "order-service"
+    ports:
+      - 9002:9002
+      - 8002:8002
+    environment:
+      - BPL_DEBUG_ENABLED=true
+      - BPL_DEBUG_PORT=8002
+      - ITBOOKS_PRODUCT_SERVICE_URI=http://product-service:9001
+      - SPRING_CLOUD_CONFIG_URI=http://config-service:8888
+      - SPRING_R2DBC_URL=r2dbc:postgresql://itbooks-postgres:5432/itbooksdb_order
+      - SPRING_FLYWAY_URL=jdbc:postgresql://itbooks-postgres:5432/itbooksdb_order
+ 
+ itbooks-postgres:
     image: "postgres:15"
     container_name: "itbooks-postgres"
     ports:
