--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -43,6 +43,22 @@ services:
       - SPRING_R2DBC_URL=r2dbc:postgresql://itbooks-postgres:5432/itbooksdb_order
       - SPRING_FLYWAY_URL=jdbc:postgresql://itbooks-postgres:5432/itbooksdb_order
  
+  edge-service:
+    depends_on:
+      - itbooks-redis
+    image: "edge-service"
+    container_name: "edge-service"
+    ports:
+      - 9000:9000
+      - 8000:8000
+    environment:
+      - BPL_DEBUG_ENABLED=true
+      - BPL_DEBUG_PORT=8000
+      - PRODUCT_SERVICE_URL=http://product-service:9001
+      - ORDER_SERVICE_URL=http://order-service:9002
+      - SPRING_CLOUD_CONFIG_URI=http://config-service:8888
+      - SPRING_REDIS_HOST=itbooks-redis
+ 
  itbooks-postgres:
     image: "postgres:15"
     container_name: "itbooks-postgres"
