--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -59,6 +59,20 @@ services:
       - SPRING_CLOUD_CONFIG_URI=http://config-service:8888
       - SPRING_REDIS_HOST=itbooks-redis
  
+  dispatcher-service:
+    depends_on:
+      - itbooks-rabbitmq:
+    image: "dispatcher-service"
+    container_name: "dispatcher-service"
+    ports:
+      - 9003:9003
+      - 8003:8003
+    environment:
+      - BPL_DEBUG_ENABLED=true
+      - BPL_DEBUG_PORT=8003
+      - SPRING_CLOUD_CONFIG_URI=http://config-service:8888
+      - SPRING_RABBITMQ_HOST=polar-rabbitmq
+ 
  itbooks-postgres:
     image: "postgres:15"
     container_name: "itbooks-postgres"
