--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - SPRING_CLOUD_CONFIG_URI=http://config-service:8888
       - SPRING_DATASOURCE_URL=jdbc:postgresql://itbooks-postgres:5432/itbooksdb_product
       - SPRING_PROFILES_ACTIVE=testdata
-  
+
   config-service:
     image: "config-service"
     container_name: "config-service"
@@ -26,7 +26,7 @@ services:
       - BPL_JVM_THREAD_COUNT=50
       - BPL_DEBUG_ENABLED=true
       - BPL_DEBUG_PORT=9888
- 
+
   order-service:
     depends_on:
       - itbooks-postgres
@@ -42,7 +42,7 @@ services:
       - SPRING_CLOUD_CONFIG_URI=http://config-service:8888
       - SPRING_R2DBC_URL=r2dbc:postgresql://itbooks-postgres:5432/itbooksdb_order
       - SPRING_FLYWAY_URL=jdbc:postgresql://itbooks-postgres:5432/itbooksdb_order
- 
+
   edge-service:
     depends_on:
       - itbooks-redis
@@ -58,10 +58,10 @@ services:
       - ORDER_SERVICE_URL=http://order-service:9002
       - SPRING_CLOUD_CONFIG_URI=http://config-service:8888
       - SPRING_REDIS_HOST=itbooks-redis
- 
+
   dispatcher-service:
     depends_on:
-      - itbooks-rabbitmq:
+      - itbooks-rabbitmq
     image: "dispatcher-service"
     container_name: "dispatcher-service"
     ports:
@@ -72,8 +72,8 @@ services:
       - BPL_DEBUG_PORT=8003
       - SPRING_CLOUD_CONFIG_URI=http://config-service:8888
       - SPRING_RABBITMQ_HOST=polar-rabbitmq
- 
- itbooks-postgres:
+
+  itbooks-postgres:
     image: "postgres:15"
     container_name: "itbooks-postgres"
     ports:
@@ -83,13 +83,13 @@ services:
       - POSTGRES_PASSWORD=password
     volumes:
       - ./postgresql/init.sql:/docker-entrypoint-initdb.d/init.sql
-      
+
   itbooks-redis:
     image: "redis:7.0"
     container_name: "itbooks-redis"
     ports:
       - 6379:6379
-  
+
   itbooks-rabbitmq:
     image: rabbitmq:3.11
     container_name: itbooks-rabbitmq
@@ -98,3 +98,13 @@ services:
       - 15672:15672
     volumes:
       - ./rabbitmq/rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf
+
+  itbooks-keycloak:
+    image: quay.io/keycloak/keycloak:20.0
+    container_name: "itbooks-keycloak"
+    command: start-dev
+    environment:
+      - KEYCLOAK_ADMIN=user
+      - KEYCLOAK_ADMIN_PASSWORD=password
+    ports:
+      - 8080:8080
